manual/validating-admission-policy/cert-manager-certificate-max-validity-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "cert-manager-certificate-maximum-validity"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: v1
    kind: ConfigMap  
  matchConstraints:
    resourceRules:
    - apiGroups:   ["cert-manager.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["certificates"]
  validations:
    - expression: "duration(object.spec.duration).getHours() <= int(params.data.maxValidityHours)"
